--- a/flair/trie/BUILD
+++ b/flair/trie/BUILD
@@ -11,9 +11,11 @@ go_library(
         "///third_party/go/github.com_hashicorp_go-multierror//:go-multierror",
         "///third_party/go/github.com_peterebden_go-cli-init_v4//logging",
         "///third_party/go/google.golang.org_genproto_googleapis_bytestream//:bytestream",
+        "///third_party/go/google.golang.org_grpc//:grpc",
+        "///third_party/go/google.golang.org_grpc//codes",
         "///third_party/go/google.golang.org_grpc//health/grpc_health_v1",
+        "///third_party/go/google.golang.org_grpc//status",
         "//proto/purity",
-        "//third_party/go:grpc",
     ],
 )
 
@@ -23,7 +25,9 @@ go_test(
     deps = [
         ":trie",
         "///third_party/go/github.com_hashicorp_go-multierror//:go-multierror",
-        "//third_party/go:grpc",
         "///third_party/go/github.com_stretchr_testify//assert",
+        "///third_party/go/google.golang.org_grpc//:grpc",
+        "///third_party/go/google.golang.org_grpc//codes",
+        "///third_party/go/google.golang.org_grpc//status",
     ],
 )
