--- a/elan/rpc/BUILD
+++ b/elan/rpc/BUILD
@@ -22,6 +22,7 @@ go_library(
         "///third_party/go/github.com_klauspost_compress//zstd",
         "///third_party/go/github.com_peterebden_go-cli-init_v4//logging",
         "///third_party/go/github.com_prometheus_client_golang//prometheus",
+        "///third_party/go/github.com_sirupsen_logrus//:logrus",
         "///third_party/go/gocloud.dev//blob",
         "///third_party/go/gocloud.dev//blob/fileblob",
         "///third_party/go/gocloud.dev//blob/gcsblob",
@@ -32,12 +33,13 @@ go_library(
         "///third_party/go/google.golang.org_api//googleapi",
         "///third_party/go/google.golang.org_genproto_googleapis_bytestream//:bytestream",
         "///third_party/go/google.golang.org_genproto_googleapis_rpc//status",
+        "///third_party/go/google.golang.org_grpc//:grpc",
+        "///third_party/go/google.golang.org_grpc//codes",
         "///third_party/go/google.golang.org_grpc//health/grpc_health_v1",
+        "///third_party/go/google.golang.org_grpc//status",
         "//grpcutil",
         "//proto/purity",
-        "//redis",
         "//rexclient",
-        "//third_party/go:grpc",
     ],
 )
 
@@ -48,10 +50,10 @@ go_test(
     deps = [
         ":rpc",
         "///third_party/go/github.com_klauspost_compress//zstd",
-        "///third_party/go/google.golang.org_genproto_googleapis_bytestream//:bytestream",
-        "//grpcutil",
         "///third_party/go/github.com_stretchr_testify//assert",
         "///third_party/go/github.com_stretchr_testify//require",
+        "///third_party/go/google.golang.org_genproto_googleapis_bytestream//:bytestream",
+        "//grpcutil",
     ],
 )
 
