--- a/flair/rpc/BUILD
+++ b/flair/rpc/BUILD
@@ -10,14 +10,16 @@ go_library(
         "///third_party/go/github.com_golang_protobuf//proto",
         "///third_party/go/github.com_peterebden_go-cli-init_v4//logging",
         "///third_party/go/github.com_peterebden_go-sri//:go-sri",
+        "///third_party/go/github.com_sirupsen_logrus//:logrus",
         "///third_party/go/golang.org_x_sync//errgroup",
         "///third_party/go/google.golang.org_genproto_googleapis_bytestream//:bytestream",
+        "///third_party/go/google.golang.org_grpc//codes",
         "///third_party/go/google.golang.org_grpc//health/grpc_health_v1",
         "///third_party/go/google.golang.org_grpc//metadata",
+        "///third_party/go/google.golang.org_grpc//status",
         "//flair/trie",
         "//grpcutil",
         "//proto/purity",
         "//rexclient",
-        "//third_party/go:grpc",
     ],
 )
