--- a/grpcutil/BUILD
+++ b/grpcutil/BUILD
@@ -8,6 +8,8 @@ go_library(
         "///third_party/go/github.com_mostynb_go-grpc-compression//zstd",
         "///third_party/go/github.com_peterebden_go-cli-init_v4//logging",
         "///third_party/go/github.com_prometheus_client_golang//prometheus",
+        "///third_party/go/google.golang.org_grpc//:grpc",
+        "///third_party/go/google.golang.org_grpc//codes",
         "///third_party/go/google.golang.org_grpc//credentials",
         "///third_party/go/google.golang.org_grpc//encoding/gzip",
         "///third_party/go/google.golang.org_grpc//grpclog",
@@ -16,7 +18,7 @@ go_library(
         "///third_party/go/google.golang.org_grpc//keepalive",
         "///third_party/go/google.golang.org_grpc//metadata",
         "///third_party/go/google.golang.org_grpc//reflection",
+        "///third_party/go/google.golang.org_grpc//status",
         "///third_party/go/gopkg.in_op_go-logging.v1//:go-logging.v1",
-        "//third_party/go:grpc",
     ],
 )
