--- a/mettle/api/BUILD
+++ b/mettle/api/BUILD
@@ -11,15 +11,18 @@ go_library(
         "///third_party/go/github.com_golang_protobuf//ptypes",
         "///third_party/go/github.com_peterebden_go-cli-init_v4//logging",
         "///third_party/go/github.com_prometheus_client_golang//prometheus",
+        "///third_party/go/github.com_sirupsen_logrus//:logrus",
         "///third_party/go/gocloud.dev//pubsub",
         "///third_party/go/google.golang.org_genproto//googleapis/longrunning",
         "///third_party/go/google.golang.org_genproto_googleapis_rpc//status",
+        "///third_party/go/google.golang.org_grpc//:grpc",
+        "///third_party/go/google.golang.org_grpc//codes",
         "///third_party/go/google.golang.org_grpc//metadata",
+        "///third_party/go/google.golang.org_grpc//status",
         "//grpcutil",
         "//mettle/common",
         "//proto/mettle",
         "//rexclient",
-        "//third_party/go:grpc",
     ],
 )
 
@@ -31,14 +34,16 @@ go_test(
         "///third_party/go/github.com_bazelbuild_remote-apis//build/bazel/remote/execution/v2",
         "///third_party/go/github.com_golang_protobuf//proto",
         "///third_party/go/github.com_golang_protobuf//ptypes",
+        "///third_party/go/github.com_stretchr_testify//assert",
+        "///third_party/go/github.com_stretchr_testify//require",
         "///third_party/go/gocloud.dev//pubsub",
         "///third_party/go/google.golang.org_genproto//googleapis/longrunning",
         "///third_party/go/google.golang.org_genproto_googleapis_bytestream//:bytestream",
+        "///third_party/go/google.golang.org_grpc//:grpc",
+        "///third_party/go/google.golang.org_grpc//codes",
+        "///third_party/go/google.golang.org_grpc//status",
         "//grpcutil",
         "//mettle/common",
         "//proto/mettle",
-        "//third_party/go:grpc",
-        "///third_party/go/github.com_stretchr_testify//require",
-        "///third_party/go/github.com_stretchr_testify//assert",
     ],
 )
