--- a/purity/gc/BUILD
+++ b/purity/gc/BUILD
@@ -14,9 +14,11 @@ go_library(
         "///third_party/go/github.com_golang_protobuf//proto",
         "///third_party/go/github.com_hashicorp_go-multierror//:go-multierror",
         "///third_party/go/github.com_peterebden_go-cli-init_v4//logging",
+        "///third_party/go/github.com_sirupsen_logrus//:logrus",
         "///third_party/go/golang.org_x_crypto//ssh/terminal",
+        "///third_party/go/google.golang.org_grpc//codes",
+        "///third_party/go/google.golang.org_grpc//status",
         "//proto/purity",
         "//rexclient",
-        "//third_party/go:grpc",
     ],
 )
